tdf#94435 RTF import: \ltrpar should not override \qc

Change-Id: I342191cd8cf8b3998089236aea5743ea7cdd26f1